# scivis-embedding-workbench

./: .codecov.yml  .gitignore  .marimo.toml  404.html  README.md  conftest.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  sitemap.xml
.github/workflows/: codeql.yml  docs.yml  tests.yml
docs/: examples.md  getting-started.md  index.md
docs/pipeline/: dashboard.md  data-processing.md  embeddings.md  prepare-data.md
examples/: index.html
getting-started/: index.html
notebooks/00_data_processing/: e5_batch.py  e5_channels.ipynb  e5_channels.py  e5_helpers.py
notebooks/01-prepare-data/: create_image_database.ipynb  create_image_database.py  resize_to_rect.py
notebooks/01-prepare-data/.ipynb_checkpoints/: create_image_database-checkpoint.ipynb
notebooks/01-prepare-data/helpers/: hurricane_metadata.py  ingest_images.py  parallel_ingest_images.py
notebooks/02-generate-embeddings/: data_Indexing.ipynb  data_Indexing.py  embedding_dashboard.py  explore.ipynb  explore.py  generate_dinov3_embeddings.ipynb  generate_dinov3_embeddings.py  panel_test.ipynb  panel_test.py
notebooks/02-generate-embeddings/.ipynb_checkpoints/: generate_dinov3_embeddings-checkpoint.ipynb
notebooks/02-generate-embeddings/helpers/: embedding_experiment.py  model_registry.json  v1_openclip_embeddings_lancedb.py  v2_dino_embeddings_lancedb.py  v3_dino_embeddings_lancedb.py  v4_dino_embeddings_lancedb.py  v5_dino_embeddings_lancedb.py
notebooks/02-generate-embeddings/helpers/.ipynb_checkpoints/: v2_dino_embeddings_lancedb-checkpoint.py
notebooks/02-generate-embeddings/layouts/: embedding_dashboard.grid.json  explore.grid.json
notebooks/03-dashboard-app/: app.py  backup_app.py  claude-auto-update-app.py  claude-before-auto-app.py  claude-working-app-2.py  claude-working-app.py  decimated_overlays.py  plotly_smoke_test.py  test_sidebar_nav.py
notebooks/03-dashboard-app/helpers/: data.py  viz.py
notebooks/03-dashboard-app/helpers/search/: __init__.py  base.py
notebooks/03-dashboard-app/helpers/search/strategies/: README.md  image_first.py  patch_first.py  template.py.example
notebooks/03-dashboard-app/layouts/: app.grid.json
notebooks/04-benchmarking/: 01_generate_ground_truth.py  02_benchmark_ann_latency.py  backfill_configs.py  benchmark_search_latency.py  run_benchmark.pbs  run_ground_truth.pbs  stage_to_nvme.py  subsample_embeddings.py
notebooks/04-benchmarking/results/: ground_truth.pkl  search_latency.csv  universal_queries.npy
notebooks/04-subsample-experiments/: subsample_embeddings.py
notebooks/dag-demo/: dag_demo.py
pipeline/dashboard/: index.html
pipeline/data-processing/: index.html
pipeline/embeddings/: index.html
pipeline/prepare-data/: index.html
search/: search_index.json
tests/: test_app_functions.py  test_docs.py  test_hurricane_metadata.py  test_ingest_helpers.py  test_marimo_notebooks.py  test_readme.py  test_search_strategies.py  test_theme.py
tests/helpers/: test_embedding_experiment_cli.py  test_embedding_experiment_db.py  test_embedding_experiment_utils.py  test_model_registry.py
