[project]
name = "bams-ai-data-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh==3.3.0",
    "datashader>=0.18.2",
    "holoviews>=1.22.1",
    "ipykernel>=7.2.0",
    "lancedb>=0.29.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "panel==1.3.1",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "pylance>=2.0.1",
    "pyviz-comms==3.0.0",
    "open-clip-torch>=2.24.0",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "marimo>=0.13.0",
    "rich>=13.0.0",
    "cartopy>=0.25.0",
    "mcp>=1.26.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.6.0",
    "wigglystuff>=0.2.37",
    "polars>=1.39.0",
    "hvplot>=0.12.2",
    "altair>=6.0.0",
    "umap-learn>=0.5.11",
    "dask>=2026.3.0",
    "zarr>=3.1.6",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "openvisus; sys_platform == 'linux'",
    "openvisusnogui; sys_platform == 'linux'",
    "openvisuspy; sys_platform == 'linux'",
    "xmltodict>=1.0.4",
    "boto3>=1.42.92",
    "colorcet>=3.1.0",
    "packaging>=26.0",
    "pelicanfs>=1.3.1",
    "scikit-image>=0.26.0",
    "urllib3>=2.6.3",
    "vtk>=9.6.1",
    "xarray>=2026.4.0",
    "netcdf4>=1.7.4",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.coverage.run]
source = ["notebooks"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/helpers/v*_dino_embeddings_lancedb.py",
    "*/helpers/v*_openclip_embeddings_lancedb.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.marimo.runtime]
output_max_bytes = 25_000_000

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501",  # line too long — not enforced
    "E402",  # module-level import not at top (notebooks use late imports)
    "E731",  # lambda assignment
    "E741",  # ambiguous variable name (i, l, O etc.)
]
